# baltrad-utils

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  setup.py
misc/: build_github_doc.sh  runtest.sh
src/baltradutils/: __init__.py  resources.py
test/: test_jprops.py
test/fixtures/: jprops.properties
